# s_shop

./: db.sqlite3  main.py  pyproject.toml
Main/: settings.py  urls.py
shop/: admin.py  context_processors.py  forms.py  models.py  urls.py  utils.py  views.py
shop/migrations/: 0001_initial.py
templates/: base.html
templates/shop/: login.html  register.html
